new_tests/semantics/scope/bad/022_RT1.cm

class A {}

retype a+3 = new A()
